# docs/v2/customer/customer_swagger.json
@@ -927,7 +927,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/customer.bankAccountResp"
+                            "$ref": "#/definitions/customer.tpBankbankAccountResp"
                         }
                     },
                     "400": {
@@ -2076,6 +2076,17 @@
                 },
                 "is_fee_paid_by_me": {
                     "type": "boolean"
+                }
+            }
+        },
+        "customer.tpBankbankAccountResp": {
+            "type": "object",
+            "properties": {
+                "account_number": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
